--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 rvm:
   - 1.8.7
   - 1.9.3
+  - 2.0.0
 script:
   - "bundle exec rake lint"
   - "bundle exec rake spec"
@@ -9,4 +10,7 @@ env:
   - PUPPET_VERSION=3.0.2
 matrix:
   allow_failures:
-    - rvm: 1.9.3
+    - rvm: 2.0.0
+  include:
+    - rvm: 1.8.7
+      env: PUPPET_GEM_VERSION="~> 2.7"
