--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,15 @@ env:
   - PUPPET_VERSION=3.4.3
 matrix:
   allow_failures:
-    - rvm: 2.0.0
+    - env: PUPPET_VERSION=3.0.2
+      rvm: 2.0.0
+    - env: PUPPET_VERSION=3.1.1
+      rvm: 2.0.0
+    - env: PUPPET_VERSION=3.0.2
+      rvm: 2.1.0
+    - env: PUPPET_VERSION=3.1.1
+      rvm: 2.1.0
+    - env: PUPPET_VERSION=3.2.4
+      rvm: 2.1.0
+    - env: PUPPET_VERSION=3.3.2
+      rvm: 2.1.0
